--- a/index.html
+++ b/index.html
@@ -63,6 +63,20 @@
     </div>
   </div>
 </div>
+
+<!-- <li class="places__item card">
+  <img class="card__image" src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/baikal.jpg" alt="" />
+  <button type="button" class="card__delete-button"></button>
+  <div class="card__description">
+    <h2 class="card__title">
+      45
+    </h2>
+    <button type="button" class="card__like-button"></button>
+  </div>
+</li> -->
+
+
+
 <script src="./scripts/cards.js"></script>
 <script src="./scripts/index.js" defer></script>
 
